0.6.2	UNRELEASED

0.6.1	2011-06-18

 BUG FIXES

  * Support git repositories without a branches directory in their control
    directory. (Jelmer Vernooij, #780239)

  * Fix two mistakes in 'bzr help git'. (Jelmer Vernooij, #791047)

  * Now raises a proper exception when receiving an "Unknown repository"
    error from GitHub. (Jelmer Vernooij, #798295)

  * Support the new limit argument to InterBranch.fetch. (Jelmer Vernooij, #750175)

  * Support the new testament API that accepts a tree rather than an
    inventory. (Jelmer Vernooij, #762608)

  * Remove InterBranch.update_revisions. (Jelmer Vernooij, #771765)

  * Implement Repository.set_make_working_trees(). (Jelmer Vernooij, #777065)

0.6.0	2011-04-12

 BUG FIXES

  * Fix encoding handling in Git working trees. (Jelmer Vernooij, #393038)

  * Use transports internally in "bzr git-import".
    (Jelmer Vernooij, #733919)

  * Provide custom GitDir.sprout() implementation for compatibility with bzr 2.4.
    (Jelmer Vernooij, #717937)

  * Revisions attached to tags that are not in the tips ancestry are now fetched.
    (Jelmer Vernooij, #309682)

  * Fix recursion error merging tags for bound branches.
    (Jelmer Vernooij, #742833)

  * Fix fetching from remote git repositories during merge.
    (Jelmer Vernooij, #741760)

  * Properly raise RootMissing if no root is specified to an empty
    tree in the commit builder. (Jelmer Vernooij, #731360)

  * Return proper conflict list from WorkingTree.conflicts. (Jelmer Vernooij, #741397)

  * Fix dpush of certain branches. (Jelmer Vernooij, #705807)

 API COMPLETENESS

  * Implement LocalGitControlDir.clone_on_transport. (Jelmer Vernooij, #721899)

 COMPATIBILITY

  * Drop support for Bazaar < 2.3. (Jelmer Vernooij)

0.5.4	2011-02-10

 BUG FIXES

  * Fix test suite compatibility with Bazaar 2.2. (Max Bowsher, #707434)

  * Fix compatibility with older versions of python-tdb.
    (Jelmer Vernooij, #707735)
